// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders correctly 1`] = `
<DocumentFragment>
  .cache-1udxpxj-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.cache-1udxpxj-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d4dae7;
}

.cache-1udxpxj-TabsContainer::-webkit-scrollbar {
  display: none;
}

<div
    class="cache-1udxpxj-TabsContainer e1h41e5k0"
    role="tablist"
  />
</DocumentFragment>
`;

exports[`Tabs renders correctly with Tabs and last disabled 1`] = `
<DocumentFragment>
  .cache-1udxpxj-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.cache-1udxpxj-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d4dae7;
}

.cache-1udxpxj-TabsContainer::-webkit-scrollbar {
  display: none;
}

.cache-1iuo8xk-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #4a4f62;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-1iuo8xk-StyledTabButton:hover,
.cache-1iuo8xk-StyledTabButton:active,
.cache-1iuo8xk-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1iuo8xk-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-1iuo8xk-StyledTabButton[aria-selected='true'] {
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):hover .e1ej5pcd3,
.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):focus .e1ej5pcd3,
.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):active .e1ej5pcd3 {
  background-color: #eeeeff;
  border-color: #eeeeff;
  color: #390171;
}

.cache-1iuo8xk-StyledTabButton[aria-disabled='true'],
.cache-1iuo8xk-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

<div
    class="cache-1udxpxj-TabsContainer e1h41e5k0"
    role="tablist"
  >
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
      role="tab"
      type="button"
    >
      First
    </button>
    <button
      aria-disabled="false"
      aria-label="1"
      aria-selected="false"
      class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
      role="tab"
      type="button"
    >
      Second
    </button>
    <button
      aria-disabled="true"
      aria-label="2"
      aria-selected="true"
      class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
      disabled=""
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tabs renders correctly with Tabs menu selected 1`] = `
<DocumentFragment>
  .cache-1udxpxj-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.cache-1udxpxj-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d4dae7;
}

.cache-1udxpxj-TabsContainer::-webkit-scrollbar {
  display: none;
}

.cache-1iuo8xk-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #4a4f62;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-1iuo8xk-StyledTabButton:hover,
.cache-1iuo8xk-StyledTabButton:active,
.cache-1iuo8xk-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1iuo8xk-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-1iuo8xk-StyledTabButton[aria-selected='true'] {
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):hover .e1ej5pcd3,
.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):focus .e1ej5pcd3,
.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):active .e1ej5pcd3 {
  background-color: #eeeeff;
  border-color: #eeeeff;
  color: #390171;
}

.cache-1iuo8xk-StyledTabButton[aria-disabled='true'],
.cache-1iuo8xk-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-8u14mj-StyledTabButton-StyledMenu {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #4a4f62;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-8u14mj-StyledTabButton-StyledMenu:hover,
.cache-8u14mj-StyledTabButton-StyledMenu:active,
.cache-8u14mj-StyledTabButton-StyledMenu:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-8u14mj-StyledTabButton-StyledMenu:focus-visible {
  outline: auto;
}

.cache-8u14mj-StyledTabButton-StyledMenu[aria-selected='true'] {
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-8u14mj-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover,
.cache-8u14mj-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus,
.cache-8u14mj-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-8u14mj-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover .e1ej5pcd3,
.cache-8u14mj-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus .e1ej5pcd3,
.cache-8u14mj-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active .e1ej5pcd3 {
  background-color: #eeeeff;
  border-color: #eeeeff;
  color: #390171;
}

.cache-8u14mj-StyledTabButton-StyledMenu[aria-disabled='true'],
.cache-8u14mj-StyledTabButton-StyledMenu:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-8u14mj-StyledTabButton-StyledMenu .e12ogfvr1 {
  color: inherit;
  margin-left: 8px;
  -webkit-transition: 300ms -webkit-transform ease-out;
  transition: 300ms transform ease-out;
}

.cache-8u14mj-StyledTabButton-StyledMenu[aria-expanded='true'] .e12ogfvr1 {
  -webkit-transform: rotate(-180deg);
  -moz-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.cache-1u2dqy2-StyledIcon-sizeStyles-ArrowIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<div
    class="cache-1udxpxj-TabsContainer e1h41e5k0"
    role="tablist"
  >
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
      role="tab"
      type="button"
    >
      First
    </button>
    <button
      aria-disabled="false"
      aria-label="1"
      aria-selected="false"
      class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
      role="tab"
      type="button"
    >
      Second
    </button>
    <button
      aria-disabled="false"
      aria-label="2"
      aria-selected="false"
      class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-controls="test"
      aria-disabled="false"
      aria-expanded="true"
      aria-haspopup="dialog"
      class="cache-8u14mj-StyledTabButton-StyledMenu e12ogfvr0"
      role="tab"
      type="button"
    >
      More
      <svg
        class="e12ogfvr1 cache-1u2dqy2-StyledIcon-sizeStyles-ArrowIcon etwatq50"
        viewBox="0 0 16 16"
      >
        <path
          d="M8 11c-.28 0-.55-.11-.74-.3L3.3 6.77a1.04 1.04 0 0 1 0-1.47 1.06 1.06 0 0 1 1.49 0L8 8.48l3.2-3.17a1.06 1.06 0 0 1 1.72.33 1.04 1.04 0 0 1-.23 1.14L8.74 10.7c-.2.2-.46.31-.74.31"
        />
      </svg>
    </button>
    <button
      aria-controls="menu"
      aria-disabled="true"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="cache-8u14mj-StyledTabButton-StyledMenu e12ogfvr0"
      disabled=""
      role="tab"
      type="button"
    >
      More again
      <svg
        class="e12ogfvr1 cache-1u2dqy2-StyledIcon-sizeStyles-ArrowIcon etwatq50"
        viewBox="0 0 16 16"
      >
        <path
          d="M8 11c-.28 0-.55-.11-.74-.3L3.3 6.77a1.04 1.04 0 0 1 0-1.47 1.06 1.06 0 0 1 1.49 0L8 8.48l3.2-3.17a1.06 1.06 0 0 1 1.72.33 1.04 1.04 0 0 1-.23 1.14L8.74 10.7c-.2.2-.46.31-.74.31"
        />
      </svg>
    </button>
  </div>
  .cache-16wxqto-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #4a4f62;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0px 0px 24px 6px #D4DAE766;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  right: inherit;
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after {
  border-color: transparent;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  border-color: transparent;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  bottom: 100%;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after {
  border-bottom-color: #ffffff;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  border-bottom-color: rgba(165, 165, 205, 0.4);
}

.cache-1tdnb7r-StyledButton-StyledButton-StyledMenuItem {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-1tdnb7r-StyledButton-StyledButton-StyledMenuItem:hover,
.cache-1tdnb7r-StyledButton-StyledButton-StyledMenuItem:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1tdnb7r-StyledButton-StyledButton-StyledMenuItem:hover,
.cache-1tdnb7r-StyledButton-StyledButton-StyledMenuItem:focus {
  color: #390171;
}

.cache-1tdnb7r-StyledButton-StyledButton-StyledMenuItem:hover svg,
.cache-1tdnb7r-StyledButton-StyledButton-StyledMenuItem:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1tdnb7r-StyledButton-StyledButton-StyledMenuItem:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-1tdnb7r-StyledButton-StyledButton-StyledMenuItem[aria-selected='true'] {
  color: #390171;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

.cache-1f3dqh9-StyledButton-StyledButton-StyledMenuItem {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  cursor: default;
  pointer-events: none;
  color: #c4c9d6;
  background-color: #f6f6f8;
  border-color: #d4dae7;
  box-shadow: none;
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1f3dqh9-StyledButton-StyledButton-StyledMenuItem:hover,
.cache-1f3dqh9-StyledButton-StyledButton-StyledMenuItem:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1f3dqh9-StyledButton-StyledButton-StyledMenuItem svg {
  fill: #c4c9d6;
}

.cache-1f3dqh9-StyledButton-StyledButton-StyledMenuItem:hover,
.cache-1f3dqh9-StyledButton-StyledButton-StyledMenuItem:focus {
  color: #390171;
}

.cache-1f3dqh9-StyledButton-StyledButton-StyledMenuItem:hover svg,
.cache-1f3dqh9-StyledButton-StyledButton-StyledMenuItem:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1f3dqh9-StyledButton-StyledButton-StyledMenuItem:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-1f3dqh9-StyledButton-StyledButton-StyledMenuItem:hover,
.cache-1f3dqh9-StyledButton-StyledButton-StyledMenuItem:focus {
  color: #4a4f62;
  background-color: #ffffff;
}

.cache-1f3dqh9-StyledButton-StyledButton-StyledMenuItem:hover svg,
.cache-1f3dqh9-StyledButton-StyledButton-StyledMenuItem:focus svg {
  fill: #4a4f62;
}

.cache-1f3dqh9-StyledButton-StyledButton-StyledMenuItem[aria-selected='true'] {
  color: #390171;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-16wxqto-StyledPopover epli4kt1"
      data-dialog="true"
      id="test"
      role="dialog"
      style="position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    >
      <div
        class="cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom epli4kt0"
        role="menu"
      >
        <button
          aria-disabled="false"
          class="ej1y0fv0 epxin6a0 cache-1tdnb7r-StyledButton-StyledButton-StyledMenuItem em6gco80"
          role="menuitem"
          type="button"
        >
          <div
            class="cache-m245rk-StyledContent em6gco83"
          >
            Test
          </div>
        </button>
        <button
          aria-disabled="true"
          class="ej1y0fv0 epxin6a0 cache-1f3dqh9-StyledButton-StyledButton-StyledMenuItem em6gco80"
          disabled=""
          role="menuitem"
          type="button"
        >
          <div
            class="cache-m245rk-StyledContent em6gco83"
          >
            Test
          </div>
        </button>
        <button
          aria-disabled="false"
          class="ej1y0fv0 epxin6a0 cache-1tdnb7r-StyledButton-StyledButton-StyledMenuItem em6gco80"
          role="menuitem"
          type="button"
        >
          <div
            class="cache-m245rk-StyledContent em6gco83"
          >
            Test
          </div>
        </button>
        <button
          aria-disabled="false"
          class="ej1y0fv0 epxin6a0 cache-1tdnb7r-StyledButton-StyledButton-StyledMenuItem em6gco80"
          role="menuitem"
          type="button"
        >
          <div
            class="cache-m245rk-StyledContent em6gco83"
          >
            Test 2
          </div>
        </button>
        <button
          aria-disabled="false"
          class="ej1y0fv0 epxin6a0 cache-1tdnb7r-StyledButton-StyledButton-StyledMenuItem em6gco80"
          role="menuitem"
          type="button"
        >
          <div
            class="cache-m245rk-StyledContent em6gco83"
          >
            Test 2
          </div>
        </button>
      </div>
    </div>
  </div>
  .cache-16wxqto-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #4a4f62;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-16wxqto-StyledPopover epli4kt1"
      data-dialog="true"
      hidden=""
      id="menu"
      role="dialog"
      style="display: none; position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;

exports[`Tabs renders correctly with Tabs name 1`] = `
<DocumentFragment>
  .cache-1udxpxj-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.cache-1udxpxj-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d4dae7;
}

.cache-1udxpxj-TabsContainer::-webkit-scrollbar {
  display: none;
}

.cache-1iuo8xk-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #4a4f62;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-1iuo8xk-StyledTabButton:hover,
.cache-1iuo8xk-StyledTabButton:active,
.cache-1iuo8xk-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1iuo8xk-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-1iuo8xk-StyledTabButton[aria-selected='true'] {
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):hover .e1ej5pcd3,
.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):focus .e1ej5pcd3,
.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):active .e1ej5pcd3 {
  background-color: #eeeeff;
  border-color: #eeeeff;
  color: #390171;
}

.cache-1iuo8xk-StyledTabButton[aria-disabled='true'],
.cache-1iuo8xk-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

<div
    class="cache-1udxpxj-TabsContainer e1h41e5k0"
    role="tablist"
  >
    <button
      aria-disabled="false"
      aria-label="first"
      aria-selected="false"
      class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
      role="tab"
      type="button"
    >
      First
    </button>
    <button
      aria-disabled="false"
      aria-label="second"
      aria-selected="true"
      class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
      role="tab"
      type="button"
    >
      Second
    </button>
    <button
      aria-disabled="true"
      aria-label="three"
      aria-selected="false"
      class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
      disabled=""
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tabs renders correctly with Tabs with prop 1`] = `
<DocumentFragment>
  .cache-1udxpxj-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.cache-1udxpxj-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d4dae7;
}

.cache-1udxpxj-TabsContainer::-webkit-scrollbar {
  display: none;
}

.cache-1iuo8xk-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #4a4f62;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-1iuo8xk-StyledTabButton:hover,
.cache-1iuo8xk-StyledTabButton:active,
.cache-1iuo8xk-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1iuo8xk-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-1iuo8xk-StyledTabButton[aria-selected='true'] {
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):hover .e1ej5pcd3,
.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):focus .e1ej5pcd3,
.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):active .e1ej5pcd3 {
  background-color: #eeeeff;
  border-color: #eeeeff;
  color: #390171;
}

.cache-1iuo8xk-StyledTabButton[aria-disabled='true'],
.cache-1iuo8xk-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-1avg75o-StyledBox-StyledBadge {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #390171;
  background: #eeeeff;
  border: 1px solid #eeeeff;
  padding: 0 8px;
  margin-left: 8px;
}

.cache-1vwepwg-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
}

.cache-1x919v9-StyledBox-StyledBadge {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #151a2d;
  background: #f6f6f8;
  border: 1px solid #d4dae7;
  padding: 0 8px;
  margin-left: 8px;
}

.cache-1hjfwlj-BadgeContainer {
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-8u14mj-StyledTabButton-StyledMenu {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #4a4f62;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-8u14mj-StyledTabButton-StyledMenu:hover,
.cache-8u14mj-StyledTabButton-StyledMenu:active,
.cache-8u14mj-StyledTabButton-StyledMenu:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-8u14mj-StyledTabButton-StyledMenu:focus-visible {
  outline: auto;
}

.cache-8u14mj-StyledTabButton-StyledMenu[aria-selected='true'] {
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-8u14mj-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover,
.cache-8u14mj-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus,
.cache-8u14mj-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-8u14mj-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover .e1ej5pcd3,
.cache-8u14mj-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus .e1ej5pcd3,
.cache-8u14mj-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active .e1ej5pcd3 {
  background-color: #eeeeff;
  border-color: #eeeeff;
  color: #390171;
}

.cache-8u14mj-StyledTabButton-StyledMenu[aria-disabled='true'],
.cache-8u14mj-StyledTabButton-StyledMenu:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-8u14mj-StyledTabButton-StyledMenu .e12ogfvr1 {
  color: inherit;
  margin-left: 8px;
  -webkit-transition: 300ms -webkit-transform ease-out;
  transition: 300ms transform ease-out;
}

.cache-8u14mj-StyledTabButton-StyledMenu[aria-expanded='true'] .e12ogfvr1 {
  -webkit-transform: rotate(-180deg);
  -moz-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.cache-1u2dqy2-StyledIcon-sizeStyles-ArrowIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1ylocks-StyledTabButton-StyledMenu-StyledTabMenu {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #4a4f62;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  position: -webkit-sticky;
  position: sticky;
  right: 0;
  top: 0;
  bottom: 0;
  background: #ffffff;
  box-shadow: 0px 0px 24px 6px #D4DAE766;
}

.cache-1ylocks-StyledTabButton-StyledMenu-StyledTabMenu:hover,
.cache-1ylocks-StyledTabButton-StyledMenu-StyledTabMenu:active,
.cache-1ylocks-StyledTabButton-StyledMenu-StyledTabMenu:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1ylocks-StyledTabButton-StyledMenu-StyledTabMenu:focus-visible {
  outline: auto;
}

.cache-1ylocks-StyledTabButton-StyledMenu-StyledTabMenu[aria-selected='true'] {
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-1ylocks-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='false']:not(:disabled):hover,
.cache-1ylocks-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='false']:not(:disabled):focus,
.cache-1ylocks-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-1ylocks-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='false']:not(:disabled):hover .e1ej5pcd3,
.cache-1ylocks-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='false']:not(:disabled):focus .e1ej5pcd3,
.cache-1ylocks-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='false']:not(:disabled):active .e1ej5pcd3 {
  background-color: #eeeeff;
  border-color: #eeeeff;
  color: #390171;
}

.cache-1ylocks-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='true'],
.cache-1ylocks-StyledTabButton-StyledMenu-StyledTabMenu:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-1ylocks-StyledTabButton-StyledMenu-StyledTabMenu .e12ogfvr1 {
  color: inherit;
  margin-left: 8px;
  -webkit-transition: 300ms -webkit-transform ease-out;
  transition: 300ms transform ease-out;
}

.cache-1ylocks-StyledTabButton-StyledMenu-StyledTabMenu[aria-expanded='true'] .e12ogfvr1 {
  -webkit-transform: rotate(-180deg);
  -moz-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

<div
    class="cache-1udxpxj-TabsContainer e1h41e5k0"
    role="tablist"
  >
    <button
      aria-disabled="false"
      aria-selected="true"
      class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
      role="tab"
      type="button"
    >
      First
      <div
        as="span"
        class="e1ej5pcd3 cache-1avg75o-StyledBox-StyledBadge egvl2gp0"
        role="status"
      >
        <p
          class="egvl2gp1 cache-1vwepwg-StyledText-StyledText e1tg3t120"
        >
          2
        </p>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-label="1"
      aria-selected="false"
      class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
      role="tab"
      type="button"
    >
      Second
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
      role="tab"
      type="button"
    >
      Undefined
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
      role="tab"
      type="button"
    >
      Counter
      <div
        as="span"
        class="e1ej5pcd3 cache-1x919v9-StyledBox-StyledBadge egvl2gp0"
        role="status"
      >
        <p
          class="egvl2gp1 cache-1vwepwg-StyledText-StyledText e1tg3t120"
        >
          12
        </p>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-label="2"
      aria-selected="false"
      class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
      role="tab"
      type="button"
    >
      Counter no items
      <div
        as="span"
        class="e1ej5pcd3 cache-1x919v9-StyledBox-StyledBadge egvl2gp0"
        role="status"
      >
        <p
          class="egvl2gp1 cache-1vwepwg-StyledText-StyledText e1tg3t120"
        >
          0
        </p>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
      role="tab"
      type="button"
    >
      Conter and badge
      <div
        as="span"
        class="e1ej5pcd3 cache-1x919v9-StyledBox-StyledBadge egvl2gp0"
        role="status"
      >
        <p
          class="egvl2gp1 cache-1vwepwg-StyledText-StyledText e1tg3t120"
        >
          12
        </p>
      </div>
      <span
        class="cache-1hjfwlj-BadgeContainer e1ej5pcd1"
      >
        Badge
      </span>
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
      role="tab"
      type="button"
    >
      Badge
      <span
        class="cache-1hjfwlj-BadgeContainer e1ej5pcd1"
      >
        Badge
      </span>
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
      role="tab"
      type="button"
    >
      Very long tab name
    </button>
    <button
      aria-controls="test"
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="cache-8u14mj-StyledTabButton-StyledMenu e12ogfvr0"
      role="tab"
      type="button"
    >
      Blabla
      <svg
        class="e12ogfvr1 cache-1u2dqy2-StyledIcon-sizeStyles-ArrowIcon etwatq50"
        viewBox="0 0 16 16"
      >
        <path
          d="M8 11c-.28 0-.55-.11-.74-.3L3.3 6.77a1.04 1.04 0 0 1 0-1.47 1.06 1.06 0 0 1 1.49 0L8 8.48l3.2-3.17a1.06 1.06 0 0 1 1.72.33 1.04 1.04 0 0 1-.23 1.14L8.74 10.7c-.2.2-.46.31-.74.31"
        />
      </svg>
    </button>
    <button
      aria-controls="menu"
      aria-disabled="false"
      aria-expanded="true"
      aria-haspopup="dialog"
      class="e1h41e5k1 cache-1ylocks-StyledTabButton-StyledMenu-StyledTabMenu e12ogfvr0"
      role="tab"
      style="box-shadow: none;"
      type="button"
    >
      More
      <svg
        class="e12ogfvr1 cache-1u2dqy2-StyledIcon-sizeStyles-ArrowIcon etwatq50"
        viewBox="0 0 16 16"
      >
        <path
          d="M8 11c-.28 0-.55-.11-.74-.3L3.3 6.77a1.04 1.04 0 0 1 0-1.47 1.06 1.06 0 0 1 1.49 0L8 8.48l3.2-3.17a1.06 1.06 0 0 1 1.72.33 1.04 1.04 0 0 1-.23 1.14L8.74 10.7c-.2.2-.46.31-.74.31"
        />
      </svg>
    </button>
  </div>
  .cache-16wxqto-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #4a4f62;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-16wxqto-StyledPopover epli4kt1"
      data-dialog="true"
      hidden=""
      id="test"
      role="dialog"
      style="position: fixed; left: 100%; top: 100%; display: none;"
      tabindex="-1"
    />
  </div>
  .cache-16wxqto-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #4a4f62;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0px 0px 24px 6px #D4DAE766;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  right: inherit;
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after {
  border-color: transparent;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  border-color: transparent;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  bottom: 100%;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after {
  border-bottom-color: #ffffff;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  border-bottom-color: rgba(165, 165, 205, 0.4);
}

.cache-b3cpp3-MenuContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-b3cpp3-MenuContainer .e1ej5pcd0 {
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 8px 16px;
  border-bottom-width: 1px;
  width: 100%;
  cursor: pointer;
  min-width: 110px;
  background-color: transparent;
}

.cache-1iuo8xk-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #4a4f62;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-1iuo8xk-StyledTabButton:hover,
.cache-1iuo8xk-StyledTabButton:active,
.cache-1iuo8xk-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1iuo8xk-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-1iuo8xk-StyledTabButton[aria-selected='true'] {
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):hover .e1ej5pcd3,
.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):focus .e1ej5pcd3,
.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):active .e1ej5pcd3 {
  background-color: #eeeeff;
  border-color: #eeeeff;
  color: #390171;
}

.cache-1iuo8xk-StyledTabButton[aria-disabled='true'],
.cache-1iuo8xk-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-1avg75o-StyledBox-StyledBadge {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #390171;
  background: #eeeeff;
  border: 1px solid #eeeeff;
  padding: 0 8px;
  margin-left: 8px;
}

.cache-1vwepwg-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
}

.cache-1x919v9-StyledBox-StyledBadge {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #151a2d;
  background: #f6f6f8;
  border: 1px solid #d4dae7;
  padding: 0 8px;
  margin-left: 8px;
}

.cache-1hjfwlj-BadgeContainer {
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-8u14mj-StyledTabButton-StyledMenu {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #4a4f62;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-8u14mj-StyledTabButton-StyledMenu:hover,
.cache-8u14mj-StyledTabButton-StyledMenu:active,
.cache-8u14mj-StyledTabButton-StyledMenu:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-8u14mj-StyledTabButton-StyledMenu:focus-visible {
  outline: auto;
}

.cache-8u14mj-StyledTabButton-StyledMenu[aria-selected='true'] {
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-8u14mj-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover,
.cache-8u14mj-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus,
.cache-8u14mj-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-8u14mj-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover .e1ej5pcd3,
.cache-8u14mj-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus .e1ej5pcd3,
.cache-8u14mj-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active .e1ej5pcd3 {
  background-color: #eeeeff;
  border-color: #eeeeff;
  color: #390171;
}

.cache-8u14mj-StyledTabButton-StyledMenu[aria-disabled='true'],
.cache-8u14mj-StyledTabButton-StyledMenu:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-8u14mj-StyledTabButton-StyledMenu .e12ogfvr1 {
  color: inherit;
  margin-left: 8px;
  -webkit-transition: 300ms -webkit-transform ease-out;
  transition: 300ms transform ease-out;
}

.cache-8u14mj-StyledTabButton-StyledMenu[aria-expanded='true'] .e12ogfvr1 {
  -webkit-transform: rotate(-180deg);
  -moz-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.cache-1u2dqy2-StyledIcon-sizeStyles-ArrowIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-16wxqto-StyledPopover epli4kt1"
      data-dialog="true"
      id="menu"
      role="dialog"
      style="position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    >
      <div
        class="cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom epli4kt0"
        role="menu"
      >
        <div
          class="cache-b3cpp3-MenuContainer e1h41e5k2"
        >
          <button
            aria-disabled="false"
            aria-selected="true"
            class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
            role="tab"
            type="button"
          >
            First
            <div
              as="span"
              class="e1ej5pcd3 cache-1avg75o-StyledBox-StyledBadge egvl2gp0"
              role="status"
            >
              <p
                class="egvl2gp1 cache-1vwepwg-StyledText-StyledText e1tg3t120"
              >
                2
              </p>
            </div>
          </button>
          <button
            aria-disabled="false"
            aria-label="1"
            aria-selected="false"
            class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
            role="tab"
            type="button"
          >
            Second
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
            role="tab"
            type="button"
          >
            Undefined
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
            role="tab"
            type="button"
          >
            Counter
            <div
              as="span"
              class="e1ej5pcd3 cache-1x919v9-StyledBox-StyledBadge egvl2gp0"
              role="status"
            >
              <p
                class="egvl2gp1 cache-1vwepwg-StyledText-StyledText e1tg3t120"
              >
                12
              </p>
            </div>
          </button>
          <button
            aria-disabled="false"
            aria-label="2"
            aria-selected="false"
            class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
            role="tab"
            type="button"
          >
            Counter no items
            <div
              as="span"
              class="e1ej5pcd3 cache-1x919v9-StyledBox-StyledBadge egvl2gp0"
              role="status"
            >
              <p
                class="egvl2gp1 cache-1vwepwg-StyledText-StyledText e1tg3t120"
              >
                0
              </p>
            </div>
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
            role="tab"
            type="button"
          >
            Conter and badge
            <div
              as="span"
              class="e1ej5pcd3 cache-1x919v9-StyledBox-StyledBadge egvl2gp0"
              role="status"
            >
              <p
                class="egvl2gp1 cache-1vwepwg-StyledText-StyledText e1tg3t120"
              >
                12
              </p>
            </div>
            <span
              class="cache-1hjfwlj-BadgeContainer e1ej5pcd1"
            >
              Badge
            </span>
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
            role="tab"
            type="button"
          >
            Badge
            <span
              class="cache-1hjfwlj-BadgeContainer e1ej5pcd1"
            >
              Badge
            </span>
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
            role="tab"
            type="button"
          >
            Very long tab name
          </button>
          <button
            aria-controls="test"
            aria-disabled="false"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="cache-8u14mj-StyledTabButton-StyledMenu e12ogfvr0"
            role="tab"
            type="button"
          >
            Blabla
            <svg
              class="e12ogfvr1 cache-1u2dqy2-StyledIcon-sizeStyles-ArrowIcon etwatq50"
              viewBox="0 0 16 16"
            >
              <path
                d="M8 11c-.28 0-.55-.11-.74-.3L3.3 6.77a1.04 1.04 0 0 1 0-1.47 1.06 1.06 0 0 1 1.49 0L8 8.48l3.2-3.17a1.06 1.06 0 0 1 1.72.33 1.04 1.04 0 0 1-.23 1.14L8.74 10.7c-.2.2-.46.31-.74.31"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="__reakit-portal"
    >
      <div
        aria-label="Menu"
        class="cache-16wxqto-StyledPopover epli4kt1"
        data-dialog="true"
        hidden=""
        id="test"
        role="dialog"
        style="position: fixed; left: 100%; top: 100%; display: none;"
        tabindex="-1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs renders correctly with custom Tabs component 1`] = `
<DocumentFragment>
  .cache-1udxpxj-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.cache-1udxpxj-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d4dae7;
}

.cache-1udxpxj-TabsContainer::-webkit-scrollbar {
  display: none;
}

.cache-1iuo8xk-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #4a4f62;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-1iuo8xk-StyledTabButton:hover,
.cache-1iuo8xk-StyledTabButton:active,
.cache-1iuo8xk-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1iuo8xk-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-1iuo8xk-StyledTabButton[aria-selected='true'] {
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):hover .e1ej5pcd3,
.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):focus .e1ej5pcd3,
.cache-1iuo8xk-StyledTabButton[aria-disabled='false']:not(:disabled):active .e1ej5pcd3 {
  background-color: #eeeeff;
  border-color: #eeeeff;
  color: #390171;
}

.cache-1iuo8xk-StyledTabButton[aria-disabled='true'],
.cache-1iuo8xk-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-csaasm-StyledLink-StyledTabButton {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #4a4f62;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-csaasm-StyledLink-StyledTabButton .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-csaasm-StyledLink-StyledTabButton>* {
  pointer-events: none;
}

.cache-csaasm-StyledLink-StyledTabButton:hover,
.cache-csaasm-StyledLink-StyledTabButton:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #390171;
  text-decoration-color: #390171;
}

.cache-csaasm-StyledLink-StyledTabButton:hover .e4bq1r52,
.cache-csaasm-StyledLink-StyledTabButton:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-csaasm-StyledLink-StyledTabButton:hover::after,
.cache-csaasm-StyledLink-StyledTabButton:focus::after {
  background-color: #390171;
}

.cache-csaasm-StyledLink-StyledTabButton:active {
  text-decoration-thickness: 2px;
}

.cache-csaasm-StyledLink-StyledTabButton:hover,
.cache-csaasm-StyledLink-StyledTabButton:active,
.cache-csaasm-StyledLink-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-csaasm-StyledLink-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-csaasm-StyledLink-StyledTabButton[aria-selected='true'] {
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-csaasm-StyledLink-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-csaasm-StyledLink-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-csaasm-StyledLink-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-csaasm-StyledLink-StyledTabButton[aria-disabled='false']:not(:disabled):hover .e1ej5pcd3,
.cache-csaasm-StyledLink-StyledTabButton[aria-disabled='false']:not(:disabled):focus .e1ej5pcd3,
.cache-csaasm-StyledLink-StyledTabButton[aria-disabled='false']:not(:disabled):active .e1ej5pcd3 {
  background-color: #eeeeff;
  border-color: #eeeeff;
  color: #390171;
}

.cache-csaasm-StyledLink-StyledTabButton[aria-disabled='true'],
.cache-csaasm-StyledLink-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

<div
    class="cache-1udxpxj-TabsContainer e1h41e5k0"
    role="tablist"
  >
    <div
      aria-disabled="false"
      aria-selected="false"
      class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
      role="tab"
    >
      First
    </div>
    <a
      aria-disabled="false"
      aria-selected="false"
      class="cache-1iuo8xk-StyledTabButton e1ej5pcd0"
      role="tab"
    >
      Second
    </a>
    <a
      class="e1ej5pcd0 cache-csaasm-StyledLink-StyledTabButton e4bq1r50"
      href="#"
    >
      Very long tab name
    </a>
  </div>
</DocumentFragment>
`;
